--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 </head>
 <body>
   <header>
-    <h1>Escola Exemplo</h1>
-    <p>Educação de qualidade para todos</p>
+    <h1>CEM HERMANO JOSÉ LEOPOLDINO FILHO</h1>
+    <p>MAIS QUE UMA ESCOLA, UMA PROJETO DE VIDA!</p>
   </header>
 
   <nav>
@@ -95,14 +95,14 @@
   <main>
     <section id="sobre">
       <h2>Sobre a Escola</h2>
-      <p>Somos uma instituição comprometida com o futuro dos nossos alunos, oferecendo ensino de qualidade desde 1995.</p>
+      <p>Somos uma instituição comprometida com o futuro dos nossos alunos, oferecendo ensino de qualidade desde 2018.</p>
     </section>
 
     <section id="noticias">
       <h2>Últimas Notícias</h2>
       <ul>
-        <li>Semana da Ciência começa segunda-feira!</li>
-        <li>Alunos do 3º ano participam da Feira de Profissões.</li>
+        <li>Inauguração do centro </li>
+        <li>Provas bimestrais .</li>
         <li>Inscrições abertas para o cursinho preparatório ENEM.</li>
       </ul>
     </section>
@@ -134,16 +134,16 @@
             <th>Evento</th>
           </tr>
           <tr>
-            <td>10/04</td>
-            <td>Reunião de Pais</td>
+            <td>07/04</td>
+            <td>provas </td>
           </tr>
           <tr>
-            <td>15/04</td>
-            <td>Feira Cultural</td>
+            <td>08/04</td>
+            <td>Inauguração</td>
           </tr>
           <tr>
-            <td>22/04</td>
-            <td>Prova Bimestral</td>
+            <td>09/04</td>
+            <td>Eletivas</td>
           </tr>
         </table>
       </div>
@@ -151,13 +151,13 @@
 
     <section id="contato">
       <h2>Contato</h2>
-      <p>Email: contato@escolaexemplo.com.br</p>
-      <p>Telefone: (11) 1234-5678</p>
+      <p>Email: jullyanafalcao24@outlook.com</p>
+      <p>Telefone: (99)985202538</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Escola Exemplo. Todos os direitos reservados.</p>
+    <p>&copy; 2025 Escola da escolha. Todos os direitos reservados.</p>
   </footer>
 </body>
 </html>
