--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
     <section id="fotos">
       <h2>Galeria de Fotos</h2>
       <div class="fotos">
-        <img src="https://via.placeholder.com/200" alt="Foto 1">
-        <img src="https://via.placeholder.com/200" alt="Foto 2">
+        <img src="minhafoto.jpg alt="Foto 1">
+        <img src="minhafoto.jpg" alt="Foto 2">
         <img src="https://via.placeholder.com/200" alt="Foto 3">
       </div>
     </section>
